fix: footer overlap issue

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   background-color: #ffffff;
-  padding: 30px;
+  padding: 15px;
   color: white;
   position: fixed;
   bottom: 0;
